--- a/KinectFittingRoom/KinectFittingRoom/MainWindow.xaml
+++ b/KinectFittingRoom/KinectFittingRoom/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:buttons="clr-namespace:KinectFittingRoom.View.Buttons"
         xmlns:helpers="clr-namespace:KinectFittingRoom.View.Helpers"
         xmlns:local="clr-namespace:KinectFittingRoom.ViewModel.ClothingItems"
-        xmlns:local2="clr-namespace:KinectFittingRoom.ViewModel.ButtonItems"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"        
+        xmlns:localTopButtons="clr-namespace:KinectFittingRoom.ViewModel.ButtonItems"
+        xmlns:d="http://schemas.microsoft.com/expressiredyon/blend/2008"        
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
@@ -19,7 +19,7 @@
     <Window.Resources>
         <converters:ReducedValueConverter x:Key="ReducedValueConverter"/>
         <converters:BitmapToImageSourceConverter x:Key="BitmapToImageSourceConverter"/>
-        <converters:MultiValueConverter x:Key="MultiValueConverter"/>
+        <converters:FixedPositionConverter x:Key="FixedPositionConverter"/>
     </Window.Resources>
     <!--Main Grid. Keeps all of the UI elements.-->
     <Grid>
@@ -106,80 +106,70 @@
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
-            <!--StackPanel containing menu button-->
-            <Canvas 
-                 Name="MainButtonPanel"
-                    Canvas.Left="200"
-                    Canvas.Top="20"
-                    Width="600"
-                    Height="100"
-                    Background="Transparent"/>
-            <ItemsControl 
-                    Canvas.Left="{Binding (Canvas.Left), ElementName=MainButtonPanel}"
-                    Canvas.Top="{Binding (Canvas.Top), ElementName=MainButtonPanel}" 
-                    Width="{Binding ActualWidth, ElementName=MainButtonPanel}"
-                    Height="{Binding ActualHeight, ElementName=MainButtonPanel}" 
-                    ItemsSource="{Binding ActualTopMenuButtons, Source={x:Static local2:TopMenuManager.Instance }}">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel Orientation="Horizontal"/>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <buttons:KinectButton  Width="70" Height="70" Margin="5,0,5,5" Style="{StaticResource RoundButton}">
-                            <Image Source="{Binding Image, Converter={StaticResource BitmapToImageSourceConverter}}" 
-                                       Width="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=Width}"
-									   Height="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=Height}"
-                                       Canvas.Left="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=(Canvas.Left)}"
-                                       Canvas.Top="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=(Canvas.Top)}"/>
-                            <i:Interaction.Triggers>
-                                <i:EventTrigger EventName="HandCursorClick">
-                                    <i:InvokeCommandAction Command="{Binding TopMenuCommand}" CommandParameter="{Binding TopButtonObject}"/>
-                                </i:EventTrigger>
-                            </i:Interaction.Triggers>
-                        </buttons:KinectButton>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
             <!--StackPanel containing all the buttons from top menu-->
-            <Canvas 
-                 Name="AllTopButtonsPanel"
-                    Canvas.Left="290"
+            <Canvas Name="AllTopButtonsPanel"
+                    Canvas.Left="{Binding ElementName=LeftPanel, Path=ActualWidth, Converter={StaticResource FixedPositionConverter}, ConverterParameter=20}"
                     Canvas.Top="20"
-                    Width="500"
-                    Height="100"
-                    Background="Transparent"
-                    Visibility="{Binding AllTopButtonsVisibility, Source={x:Static local2:TopMenuManager.Instance }}"/>
-            <ItemsControl
-                    Width="{Binding Width, ElementName=AllTopButtonsPanel}"
+                    Width="80"
+                    Height="80"
+                    Background="Transparent"/>
+            <StackPanel
+                    Orientation="Horizontal"
+                    Width="600"
                     Height="{Binding Height, ElementName=AllTopButtonsPanel}" 
                     Canvas.Left="{Binding (Canvas.Left), ElementName=AllTopButtonsPanel}"
-                    Canvas.Top="{Binding (Canvas.Top), ElementName=AllTopButtonsPanel}" 
-                    ItemsSource="{Binding AllButtons, Source={x:Static local2:TopMenuManager.Instance}}"
-                    Visibility="{Binding AllTopButtonsVisibility, Source={x:Static local2:TopMenuManager.Instance }}">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel Orientation="Horizontal"/>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <buttons:KinectButton  Width="70" Height="70" Margin="5,0,5,5" Style="{StaticResource RoundButton}">
-                            <Image Source="{Binding Image, Converter={StaticResource BitmapToImageSourceConverter}}" 
+                    Canvas.Top="{Binding (Canvas.Top), ElementName=AllTopButtonsPanel}">
+                <buttons:KinectButton Width="70" Height="70" Margin="5,0,5,5" Style="{StaticResource RoundButton}"  DataContext="{Binding MenuButton, Source={x:Static localTopButtons:TopMenuManager.Instance}}">
+                    <Image Source="{Binding Image, Converter={StaticResource BitmapToImageSourceConverter}}"
+                           Width="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=Width}"
+                           Height="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=Height}"
+                           Canvas.Left="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=(Canvas.Left)}"
+                           Canvas.Top="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=(Canvas.Top)}"/>
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="HandCursorClick">
+                            <i:InvokeCommandAction Command="{Binding TopMenuCommand}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </buttons:KinectButton>
+                <buttons:KinectButton Width="70" Height="70" Margin="5,0,5,5" Style="{StaticResource RoundButton}" 
+                                      Visibility="{Binding CameraButtonVisibility, Source={x:Static localTopButtons:TopMenuManager.Instance}}" 
+                                      DataContext="{Binding CameraButton, Source={x:Static localTopButtons:TopMenuManager.Instance}}"
+                                      HandCursorClick="ScreenShotEvent">
+                    <Image Source="{Binding Image, Converter={StaticResource BitmapToImageSourceConverter}}"
+                           Width="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=Width}"
+                           Height="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=Height}"
+                           Canvas.Left="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=(Canvas.Left)}"
+                           Canvas.Top="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=(Canvas.Top)}"/>
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="HandCursorClick">
+                            <i:InvokeCommandAction CommandName="ScreenShotEvent"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </buttons:KinectButton>
+                <ItemsControl ItemsSource="{Binding ActualTopMenuButtons, Source={x:Static localTopButtons:TopMenuManager.Instance}}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <buttons:KinectButton  Width="70" Height="70" Margin="5,0,5,5" Style="{StaticResource RoundButton}">
+                                <Image Source="{Binding Image, Converter={StaticResource BitmapToImageSourceConverter}}" 
                                        Width="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=Width}"
 									   Height="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=Height}"
                                        Canvas.Left="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=(Canvas.Left)}"
                                        Canvas.Top="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type buttons:KinectButton}}, Path=(Canvas.Top)}"/>
-                            <i:Interaction.Triggers>
-                                <i:EventTrigger EventName="HandCursorClick">
-                                    <i:InvokeCommandAction Command="{Binding TopMenuCommand}" CommandParameter="{Binding TopButtonObject}"/>
-                                </i:EventTrigger>
-                            </i:Interaction.Triggers>
-                        </buttons:KinectButton>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="HandCursorClick">
+                                        <i:InvokeCommandAction Command="{Binding TopMenuCommand}" />
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </buttons:KinectButton>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </StackPanel>
         </Canvas>
         <!--Temporary container for flat 2D clothing models-->
         <ItemsControl x:Name="ClothesArea" ItemsSource="{Binding ChosenClothes.Values, Source={x:Static local:ClothingManager.Instance}}">
