--- a/KinectFittingRoom/KinectFittingRoom/MainWindow.xaml
+++ b/KinectFittingRoom/KinectFittingRoom/MainWindow.xaml
@@ -34,9 +34,9 @@
         </Grid.Background>
         <!--Image from the Kinect camera-->
         <Image x:Name="ImageArea" Source="{Binding KinectService.KinectCameraImage}"
-			   helpers:PropertiesObserver.Observe="True"
-			   helpers:PropertiesObserver.ObservedWidth="{Binding KinectService.Width, Mode=OneWayToSource}"
-			   helpers:PropertiesObserver.ObservedHeight="{Binding KinectService.Height, Mode=OneWayToSource}"/>
+			   helpers:SizeObserver.Observe="True"
+			   helpers:SizeObserver.ObservedWidth="{Binding KinectService.Width, Mode=OneWayToSource}"
+			   helpers:SizeObserver.ObservedHeight="{Binding KinectService.Height, Mode=OneWayToSource}"/>
         <!--Canvas containing button panels-->
         <Canvas Name="ButtonPanelsCanvas" Width="{Binding KinectService.Width}" Height="{Binding KinectService.Height}">
             <Canvas Name="LeftPanel"
